--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "next": "^6.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
+  },
+  "scripts": {
+    "build": "next build",
+    "start": "next start"
   }
 }
